--- a/src/main/resources/templates/empleado.html
+++ b/src/main/resources/templates/empleado.html
@@ -1,24 +1,68 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Formulario para agregar empleado</title>
-</head>
-<body>
-    <h2>Formulario para agregar empleado</h2>
-    <form action="/empleado" method="post">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required><br><br>
-        
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="apellido" required><br><br>
-        
-        <label for="identificacion">Identificación:</label>
-        <input type="number" id="identificacion" name="identificacion" required><br><br>
-        
-        <label for="direccion">ID de dirección:</label>
-        <input type="number" id="direccion" name="direccion" required><br><br>
-        
-        <input type="submit" value="Agregar empleado">
-    </form>
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>EMPLEADO CRUD</title>
+    </head>
+    <body>
+
+        <h1>READ</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>ID Empleado</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Identificación</th>
+                    <th>ID Dirección</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="empleado : ${empleados}">
+                    <td th:text="${empleado.idEmpleado}"></td>
+                    <td th:text="${empleado.nombreEmpleado}"></td>
+                    <td th:text="${empleado.apellidoEmpleado}"></td>
+                    <td th:text="${empleado.identificacionEmpleado}"></td>
+                    <td th:text="${empleado.direccion.idDireccion}"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <h1>CREATE</h1>
+        <form action="/empleados/agregar" method="post">
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" name="nombre" required>
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" name="apellido" required>
+            <label for="identificacion">Identificación:</label>
+            <input type="text" id="identificacion" name="identificacion" required>
+            <label for="idDireccion">ID Dirección:</label>
+            <input type="text" id="idDireccion" name="idDireccion" required>
+            <button type="submit">Agregar Empleado</button>
+        </form>
+        <p>[[${mensaje}]]</p>
+
+        <h1>UPDATE</h1>
+        <form onsubmit="return redireccionar(event)">
+            <label for="numero">ID:</label>
+            <input type="number" id="numero" required>
+            <button type="submit">Ir a editar</button>
+        </form>
+
+        <script>
+            function redireccionar(event) {
+                event.preventDefault();
+                var numero = document.getElementById("numero").value;
+                window.location.href = "/empleados/" + numero + "/editar";
+                return false;
+            }
+        </script>
+
+        <h1>DELETE</h1>
+        <form th:action="@{/empleados/eliminar}" method="post">
+            <label for="idEliminar">ID:</label>
+            <input type="number" id="idEliminar" name="idEliminar" required>
+            <button type="submit" class="btn btn-danger">Eliminar</button>
+        </form>
+
+    </body>
 </html>
