--- a/src/main/resources/templates/funcion_empleados.html
+++ b/src/main/resources/templates/funcion_empleados.html
@@ -1,23 +1,50 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Lista de Empleados</title>
-    </head>
-    <body>
+<head>
+    <title>Lista de Empleados</title>
+    <!-- Agrega los enlaces de estilo de Bootstrap y Font Awesome -->
+    <style>
+        body {
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+
+        .table-container {
+            background-color: #ffffff;
+            border-radius: 5px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
         <h1>Lista de Empleados</h1>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Identificación</th>
-            </tr>
-            <tr th:each="empleado : ${empleados}">
-                <td th:text="${empleado.idEmpleado}"></td>
-                <td th:text="${empleado.nombreEmpleado}"></td>
-                <td th:text="${empleado.apellidoEmpleado}"></td>
-                <td th:text="${empleado.identificacionEmpleado}"></td>
-            </tr>
-        </table>
-    </body>
+        <div class="table-container">
+            <table class="table table-bordered table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Identificación</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="empleado : ${empleados}">
+                        <td th:text="${empleado.idEmpleado}"></td>
+                        <td th:text="${empleado.nombreEmpleado}"></td>
+                        <td th:text="${empleado.apellidoEmpleado}"></td>
+                        <td th:text="${empleado.identificacionEmpleado}"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</body>
 </html>
