--- a/src/main/resources/templates/imprimir_empleados.html
+++ b/src/main/resources/templates/imprimir_empleados.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Imprimir Empleados</title>
-    </head>
-    <body>
+<head>
+    <title>Imprimir Empleados</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            background-color: #ffffff;
+            border-radius: 5px;
+            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #dee2e6;
+        }
+
+        th {
+            background-color: #007bff;
+            color: #ffffff;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
         <h1>Lista de Empleados</h1>
         <table>
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Identificación</th>
-            </tr>
-            <tr th:each="empleado : ${empleados}">
-                <td th:text="${empleado.idEmpleado}"></td>
-                <td th:text="${empleado.nombreEmpleado}"></td>
-                <td th:text="${empleado.apellidoEmpleado}"></td>
-                <td th:text="${empleado.identificacionEmpleado}"></td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Identificación</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="empleado : ${empleados}">
+                    <td th:text="${empleado.idEmpleado}"></td>
+                    <td th:text="${empleado.nombreEmpleado}"></td>
+                    <td th:text="${empleado.apellidoEmpleado}"></td>
+                    <td th:text="${empleado.identificacionEmpleado}"></td>
+                </tr>
+            </tbody>
         </table>
-    </body>
+    </div>
+</body>
 </html>
