--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,9 @@
     <head th:fragment="head">
         <title>TechnoMind - CRUDs Oracle</title>
         <meta charset="UTF-8" />
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>   
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-            <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+            
             <style>
                 body {
                     background-color: #f8f9fa;
@@ -118,6 +113,24 @@
                             <div class="card-body">
                                 <h5 class="card-title">Tipo Empresa</h5>
                                 <a href="tipo-empresas/" class="btn btn-primary">Ver</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img style="width:100px; margin:0 auto; padding-top: 15px" src="https://cdn-icons-png.flaticon.com/512/648/648227.png" class="card-img-top" alt="Imagen 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Vista Empleados</h5>
+                                <a href="empleados/imprimirView" class="btn btn-primary">Ver</a>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <img style="width:100px; margin:0 auto; padding-top: 15px" src="https://cdn-icons-png.flaticon.com/512/5087/5087643.png" class="card-img-top" alt="Imagen 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Funcion Empleados</h5>
+                                <a href="empleados/imprimirFunc" class="btn btn-primary">Ver</a>
                             </div>
                     </div>
                 </div>
