--- a/src/main/resources/templates/direcciones/direccionUpdate.html
+++ b/src/main/resources/templates/direcciones/direccionUpdate.html
@@ -53,7 +53,7 @@
         <h1>Update Address</h1>
         <form th:action="@{/direcciones/{id}/editar(id=${direccion.idDireccion})}" method="post">
             <label for="referencias">New Address:</label>
-            <input type="text" id="referencias" name="referencias" value="" required>
+            <input type="text" id="referencias" name="referencias" th:value="${direccion.referencias}" required>
             <button type="submit">Save Changes</button>
         </form>
     </div>
